adicionando hover nos elementos

--- a/menu.html
+++ b/menu.html
@@ -31,6 +31,7 @@
             <a href=""> <img src="img/baner-produtoras/netflix.png" alt=""> </a>
             <a href=""> <img src="img/baner-produtoras/amazon.jpg" alt=""> </a>
     </div>
+    <a href="index.html"><button class="botao">Home</button></a>
     <script src="script.js"></script>
 </body>
 </html> 
